<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_blue"
    android:gravity="fill|top"
    tools:context=".activity.MainActivity">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:src="@drawable/penn_state_logo"/>

    <TextView
        android:id="@+id/text_view_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textStyle="bold"
        android:textColor="@color/light_blue"
        android:layout_marginBottom="10dp"
        android:text="@string/text_view_user" />

    <EditText
        android:id="@+id/edit_text_user"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/light_blue"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text_view_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/light_blue"
        android:text="@string/text_view_password" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/light_blue"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:textColor="@color/dark_blue"
        android:backgroundTint="@color/off_white"
        android:text="@string/button_sign_in"/>

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:textColor="@color/dark_blue"
        android:backgroundTint="@color/off_white"
        android:text="@string/button_sign_up"/>

</LinearLayout>